# ATS_project

./: .env  .gitignore  README.md  app.py  groq_api.py  index.py  main.py  pyproject.toml  requirements.txt  vercel.json
api/: index.py
static/: script.js  style.css
templates/: index.html
