[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-ats-resume-checker"
version = "1.0.0"
description = "AI-powered ATS Resume Checker with FastAPI backend"
authors = [
    {name = "Ahenstech", email = "contact@ahenstech.com"},
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "PyMuPDF==1.23.8",
    "docx2txt==0.8",
    "pydantic==2.5.0",
]

[project.scripts]
app = "app:app"

[tool.setuptools]
packages = ["."]
